<resources>
    <string name="app_name">HellAndroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_tab_user_center">用户中心</string>
    <string name="home_tab_paycheck">财务中心</string>
    <string name="home_tab_user_register">会员注册</string>
    <string name="home_tab_system_management">系统管理</string>

    <string name="login_tv_1">登录明慧通路预充消费</string>
    <string name="login_account">账户</string>
    <string name="login_account_hint">手机/会员名/邮箱</string>
    <string name="login_password">登录密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_loging">开始预充消费</string>
    <string name="login_password_forget">忘记密码</string>
    <string name="login_error1">请输入用户名</string>
    <string name="login_error2">请输入密码</string>
    <string name="user_number">会员编号</string>
    <string name="now_password">当前密码</string>
    <string name="password">密码</string>
    <string name="submit_password">确认密码</string>
    <string name="submit">确认修改</string>
    <string name="cancel">重置</string>
    <string name="logining">正在登录</string>

    <string name="user_center">用户中心</string>
    <string name="user_info">用户信息</string>
    <string name="user_info_modify">用户信息修改</string>
    <string name="modify_password">修改密码</string>
    <string name="sales_info">销售信息</string>
    <string name="network">直推网络图</string>
    <string name="cover_list">自荐列表</string>

    <string name="gold_transfer">金币转账</string>
    <string name="integral_transfer">积分转账</string>
    <string name="recharge">充值</string>
    <string name="withd_rawals">提现</string>

    <string name="query_query_management">提现查询管理</string>
    <string name="gold_transfer_management">金币转账管理</string>
    <string name="integral_transfer_management">积分转账管理</string>
    <string name="recharge_management">充值查询管理</string>
    <string name="activate_others">激活他人</string>
    <string name="activate_self">激活自己</string>
    <string name="member_management">会员管理</string>

    <string name="self_register">自己注册</string>
    <string name="vip_product">VIP产品:</string>
    <string name="vip_product_type">请选择产品类型</string>
    <string name="reference_number">推荐人编号</string>
    <string name="my_push_number">自推单数</string>
    <string name="pay_way">支付方式:</string>
    <string name="gold">金币</string>
    <string name="card">银行卡</string>
    <string name="post">提交</string>
    <string name="other_register">他人注册</string>
    <string name="user_name">用户名：</string>
    <string name="real_name">真实姓名：</string>
    <string name="phone_num">手机：</string>
    <string name="user_email">邮箱：</string>
    <string name="choice_product">选择产品：</string>
    <string name="form_num">报单中心编号：</string>
    <string name="bank_account">开户银行选择：</string>
    <string name="bank_account_num">开户银行帐号：</string>
    <string name="bank_branch_name">银行支行名称：</string>
    <string name="subsidiary_name">所属子公司：</string>

    <string name="consumption_integral">消费积分：</string>
    <string name="gold_1">金币:</string>
    <string name="transfer_object_number">转账对象帐号:</string>
    <string name="integral_transfer_100">转出100积分</string>
    <string name="integral_transfer_200">转出200积分</string>
    <string name="integral_transfer_300">转出300积分</string>
    <string name="integral_transfer_400">转出400积分</string>
    <string name="integral_transfer_500">转出500积分</string>
    <string name="integral_transfer_600">转出600积分</string>
    <string name="integral_transfer_700">转出700积分</string>
    <string name="integral_transfer_1000">转出1000积分</string>
    <string name="integral_transfer_2000">转出2000积分</string>
    <string name="integral_transfer_other">其他积分：</string>
    <string name="integral">积分</string>

    <string name="gold_transfer_100">转出100金币</string>
    <string name="gold_transfer_200">转出200金币</string>
    <string name="gold_transfer_300">转出300金币</string>
    <string name="gold_transfer_400">转出400金币</string>
    <string name="gold_transfer_500">转出500金币</string>
    <string name="gold_transfer_600">转出600金币</string>
    <string name="gold_transfer_700">转出700金币</string>
    <string name="gold_transfer_1000">转出1000金币</string>
    <string name="gold_transfer_2000">转出2000金币</string>
    <string name="gold_transfer_other">其他金额：</string>
    <string name="submit_transfer">确定转账</string>

    <string name="recharge_100">充值100元</string>
    <string name="recharge_200">充值200元</string>
    <string name="recharge_300">充值300元</string>
    <string name="recharge_400">充值400元</string>
    <string name="recharge_500">充值500元</string>
    <string name="recharge_600">充值600元</string>
    <string name="recharge_700">充值700元</string>
    <string name="recharge_1000">充值1000元</string>
    <string name="recharge_2000">充值2000元</string>
    <string name="recharge_other">其他金额：</string>
    <string name="bank_name">银行名称：</string>
    <string name="yuan">元</string>


    <string name="input_user_name">请输入用户名</string>
    <string name="query_time">查询时间：</string>
    <string name="start_time">开始时间</string>
    <string name="to">至   ：</string>
    <string name="end_time">结束时间</string>
    <string name="is_out">是否出局：</string>
    <string name="can_choice">可选择</string>




    <!-- app更新 -->
    <string name="app_update_title">检测到新版本</string>
    <string name="app_update_version">版本号 : %1$s</string>
    <string name="app_update_version_default">版本号 : 无</string>
    <string name="app_update_info">更新内容 : %1$s</string>
    <string name="app_update_info_default">更新内容 : 无</string>
    <string name="app_update_ok">立即更新</string>
    <string name="app_update_cancle">以后再说</string>


    <string name="title_activity_pay_check_acitity">PayCheckAcitity</string>
    <string name="newwork_error">当前网络不可用，请检查网络连接</string>
</resources>
