<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/home_tab_user_register"
        android:textSize="@dimen/ts_22" />

    <Button
        android:layout_width="200dp"
        android:id="@+id/bt_own_register"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_top_9"
        android:text="@string/self_register" />

    <Button
        android:layout_width="200dp"
        android:id="@+id/bt_other_register"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_top_9"
        android:text="@string/other_register" />

</LinearLayout>
