<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mhtl.businesscenter.activity.LoginActivity">

    <!--    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_iv"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_tv_1"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_account"
                android:textSize="@dimen/ts_22" />

            <EditText
                android:id="@+id/ed_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/login_account_hint"
                android:lines="1"
                android:paddingLeft="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_password"
                android:textSize="@dimen/ts_22" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textPassword"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:lines="1"
                android:paddingLeft="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_loging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/base_bt_bg"
        android:text="@string/login_loging" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tv_password_forget"
        android:layout_height="wrap_content"
        android:text="@string/login_password_forget"
        android:layout_marginTop="@dimen/base_top_10"
        android:layout_marginRight="12dp"
        android:textSize="@dimen/ts_15"
        android:layout_gravity="right" />


</LinearLayout>
